--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,20 +10,32 @@ dependencies:
   http: ^1.2.2
   shared_preferences: ^2.2.3
   google_maps_flutter: ^2.9.0
+  google_fonts: ^6.2.1
   razorpay_flutter: ^1.3.6
   cupertino_icons: ^1.0.6
+  cached_network_image: ^3.2.3
+  carousel_slider: ^4.2.1
+  intl: ^0.18.0
+  timer_builder: ^2.0.0
+  flutter_staggered_grid_view: ^0.7.0
+  share_plus: ^9.0.0
+  url_launcher: ^6.3.0
+  table_calendar: ^3.0.9
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
 
+# The following section is for Flutter-specific configurations.
 flutter:
+
+  # The following line ensures that the Material Icons font is
+  # included with your application.
   uses-material-design: true
-  # assets:
-  #   - assets/images/logo.png   # put your logo here
-  #   - assets/icons/            # if you have custom icons
-  # fonts:
-  #   - family: Sporty
-  #     fonts:
-  #       - asset: assets/fonts/Sporty.ttf   # optional if you have it
+
+  # To add assets to your application, add an assets section.
+  # Declaring the folder is better than declaring each file.
+  assets:
+    - assets/images/
