--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   share_plus: ^12.0.0
   url_launcher: ^6.3.0
   table_calendar: ^3.0.9
+  geolocator: ^10.0.0
+  image_picker: ^1.0.0
 
 
 dev_dependencies:
